--- a/app/src/main/res/layout/categories_fragment.xml
+++ b/app/src/main/res/layout/categories_fragment.xml
@@ -4,9 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/categories_fragment_root_layout">
-    <TextView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/nav_drawer_categories"
-        android:gravity="center"/>
+        android:layout_height="wrap_content"
+        android:id="@+id/list_of_categories">
+
+    </android.support.v7.widget.RecyclerView>
 </LinearLayout>
