отформатировал код + добавил FAB

--- a/app/src/main/res/layout-v21/expenses_fragment.xml
+++ b/app/src/main/res/layout-v21/expenses_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -12,11 +13,10 @@
         android:id="@+id/list_of_expenses"/>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@mipmap/ic_plus_white_18dp"
         android:layout_gravity="end|bottom"
-        app:layout_behavior=".utils.ScrollAwareFABBehavior"
+        app:layout_behavior=""
         android:layout_margin="@dimen/padding"/>
 </android.support.design.widget.CoordinatorLayout>
